set font + bg by sns

--- a/ml.ipynb
+++ b/ml.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM3XKEcdkBtlR8UDVbKHJv/",
+      "authorship_tag": "ABX9TyOtkH7HX1E+PWsFBsTnaTWo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,10 +63,55 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **set style**"
+      ],
+      "metadata": {
+        "id": "oshS_LhjJti7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sns.set(font_scale=1.5)\n",
+        "sns.set_style('whitegrid')"
+      ],
+      "metadata": {
+        "id": "pEBkc5w7Iskf"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "```sns.set(font_scale=1.15)```\n",
+        "\n",
+        "**ความหมาย:** <br>\n",
+        "ตั้งค่าขนาดตัวอักษรบนกราฟที่สร้างด้วย seaborn ให้ใหญ่ขึ้น 1.15 เท่าจากค่าปกติ"
+      ],
+      "metadata": {
+        "id": "5hYTmZCEKAK2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "```sns.set_style(\"whitegrid\")```\n",
+        "\n",
+        "**ความหมาย:**<br>\n",
+        "กำหนดธีมพื้นหลังของกราฟให้เป็นแบบ \"whitegrid\""
+      ],
+      "metadata": {
+        "id": "c-SipMvEKIXi"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "pEBkc5w7Iskf"
+        "id": "YlyhWh2BJsl0"
       },
       "execution_count": null,
       "outputs": []
