หลายละเอียดข้อมูลแต่ละ column

--- a/ml.ipynb
+++ b/ml.ipynb
@@ -611,7 +611,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 535
+          "height": 289
         },
         "id": "D43GVDKwLKbJ",
         "outputId": "97478834-b203-4956-a8dd-8e24ce5bfdeb"
@@ -1217,6 +1217,44 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **--- ข้อมูลส่วนตัว ---**\n",
+        "\n",
+        "```person_age``` = อายุผู้กู้<br>\n",
+        "\n",
+        "```person_income``` = รายได้ต่อปี<br>\n",
+        "\n",
+        "```person_home_ownership```= สถานะการครอบครองที่อยู่อาศัย *เช่า(Rent) , เป็นเจ้าของ(Own) , กำลังผ่อนจำนอง(Mortgage)*\n",
+        "\n",
+        "```person_emp_length``` = อายุงานที่ทำงานปัจจุบัน เพื่อวัดความมั่งคงอาชีพ\n",
+        "\n",
+        "# **---ข้อมูลเกี่ยวกับสินเชื่อ ---**\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "KnUY2ZPbaJj8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ohmLOihbaT2j"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Hju3LgFRaTSC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
@@ -1229,7 +1267,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMiYvuUS8/Bkrillav6ZNLh",
+      "authorship_tag": "ABX9TyP/RmyBbRoxpxSLjWJ7ysfU",
       "include_colab_link": true
     },
     "kernelspec": {
